# harkkaty-

./: .coveragerc  .pylintrc  README.md  coverage.xml  pyproject.toml  tasks.py
.github/workflows/: main.yml
documents/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
documents/viikkoraportit/: raportti1.md  raportti2.md  raportti3.md  raportti4.md  raportti5.md  raportti6.md
src/: index.py
src/data/: 3000_words.txt  ap_wordslist.txt  test.txt  test_wordslist.txt
src/entities/: distance.py  trie.py  word_dictionary.py
src/services/: spellchecker.py
src/tests/: distance_test.py  spellchecker_test.py  trie_test.py
