[tool.poetry]
name = "harkkaty-"
version = "0.1.0"
description = ""
authors = ["kxelina <elina88.k@gmail.com>"]
readme = "README.md"
packages = [{include = "harkkaty_"}]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
coverage = "^7.4.0"
autopep8 = "^2.0.4"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
